--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,4 +1,5 @@
 [production]
+
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
@@ -9,6 +10,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view[] =
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
 [staging : production]
 
