Add model for topics

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,6 +11,7 @@ resources.frontController.params.displayExceptions = 0
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view[] =
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.modules[] = "admin"
 
 [staging : production]
 
